[gd_scene load_steps=17 format=2]

[ext_resource path="res://SCHLBKI.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Object/TextObject.gd" type="Script" id=2]
[ext_resource path="res://Object/PlaneRenderer.gd" type="Script" id=3]
[ext_resource path="res://Object/VboxRenderer.gd" type="Script" id=4]
[ext_resource path="res://Object/2DCircleObject.gd" type="Script" id=5]
[ext_resource path="res://Object/2DVectorObject.gd" type="Script" id=6]
[ext_resource path="res://CENSCBK.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://percentron.gd" type="Script" id=8]
[ext_resource path="res://Font.tres" type="DynamicFont" id=9]
[ext_resource path="res://Object/2DCoordinateRenderer.gd" type="Script" id=10]
[ext_resource path="res://Resource/Linear.gd" type="Script" id=11]
[ext_resource path="res://Object/2DFunctionObject.gd" type="Script" id=12]
[ext_resource path="res://Object/2DPointObject.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 100
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Resource" id=3]
script = ExtResource( 11 )
w1 = 2.0
w2 = 2.0
b = 1.0

[sub_resource type="DynamicFont" id=2]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="Plane2DRenderer" type="Node2D" parent="."]
script = ExtResource( 3 )
Rect = Rect2( 0, 0, 1920, 1080 )
Center = Vector2( 0, 0 )
Clip = true

[node name="TextObject" type="Node" parent="Plane2DRenderer"]
script = ExtResource( 2 )
TextFont = SubResource( 1 )
Text = "percentron"
VAlign = 0
Position = Vector2( 100, 40 )

[node name="Coordinate2DRenderer" type="Node2D" parent="Plane2DRenderer"]
position = Vector2( 1046.35, 223.247 )
script = ExtResource( 10 )
Rect = Rect2( 0, 0, 700, 700 )
Center = Vector2( 250, 450 )
Clip = true
Scale = Vector2( 190, 190 )
LineWidth = 1.0
RuleWidth = 15.0
LineColor = Color( 1, 1, 1, 1 )
Aspect = Vector2( 1, 1 )
AspectXUnit = ""
AspectYUnit = ""
RemainLineX = true
RemainLineY = true
RuleFont = ExtResource( 9 )

[node name="Function2D" type="Node" parent="Plane2DRenderer/Coordinate2DRenderer"]
script = ExtResource( 12 )
Function = SubResource( 3 )
LineWidth = 2.0
LineColor = Color( 0.839216, 0.188235, 0.188235, 1 )

[node name="Point2DObject" type="Node" parent="Plane2DRenderer/Coordinate2DRenderer"]
script = ExtResource( 13 )
Type = 0
Function = null
Position = Vector2( 0, 0 )
Radius = 10.0
PointColor = Color( 1, 1, 0, 1 )

[node name="TextObject" type="Node" parent="Plane2DRenderer/Coordinate2DRenderer"]
script = ExtResource( 2 )
TextFont = SubResource( 2 )
Text = "(0,0)"
HAlign = 2
VAlign = 0
Position = Vector2( -0.1, -0.1 )

[node name="Point2DObject2" type="Node" parent="Plane2DRenderer/Coordinate2DRenderer"]
script = ExtResource( 13 )
Type = 0
Function = null
Position = Vector2( 1, 0 )
Radius = 10.0
PointColor = Color( 1, 1, 0, 1 )

[node name="TextObject2" type="Node" parent="Plane2DRenderer/Coordinate2DRenderer"]
script = ExtResource( 2 )
TextFont = SubResource( 2 )
Text = "(1,0)"
VAlign = 0
Position = Vector2( 1.1, -0.1 )

[node name="Point2DObject3" type="Node" parent="Plane2DRenderer/Coordinate2DRenderer"]
script = ExtResource( 13 )
Type = 0
Function = null
Position = Vector2( 0, 1 )
Radius = 10.0
PointColor = Color( 1, 1, 0, 1 )

[node name="TextObject3" type="Node" parent="Plane2DRenderer/Coordinate2DRenderer"]
script = ExtResource( 2 )
TextFont = SubResource( 2 )
Text = "(0,1)"
HAlign = 2
Position = Vector2( -0.1, 1.1 )

[node name="Point2DObject4" type="Node" parent="Plane2DRenderer/Coordinate2DRenderer"]
script = ExtResource( 13 )
Type = 0
Function = null
Position = Vector2( 1, 1 )
Radius = 10.0
PointColor = Color( 1, 1, 0, 1 )

[node name="TextObject4" type="Node" parent="Plane2DRenderer/Coordinate2DRenderer"]
script = ExtResource( 2 )
TextFont = SubResource( 2 )
Text = "(1,1)"
Position = Vector2( 1.1, 1.1 )

[node name="VBoxRenderer" type="Node2D" parent="Plane2DRenderer"]
position = Vector2( 457.872, 449.215 )
script = ExtResource( 4 )
Rect = Rect2( 0, 0, 80, 240 )
Center = Vector2( 0, 0 )
Clip = false
HAlign = 1

[node name="Circle2DObject" type="Node" parent="Plane2DRenderer/VBoxRenderer"]
script = ExtResource( 5 )
Position = Vector2( 40, 40 )
Radius = 40.0
LineColor = Color( 1, 1, 1, 1 )
Fill = true
FillColor = Color( 0, 0, 0, 1 )

[node name="Circle2DObject2" type="Node" parent="Plane2DRenderer/VBoxRenderer"]
script = ExtResource( 5 )
Position = Vector2( 40, 120 )
Radius = 40.0
LineColor = Color( 1, 1, 1, 1 )
Fill = true
FillColor = Color( 1, 1, 1, 1 )

[node name="VBoxRenderer2" type="Node2D" parent="Plane2DRenderer"]
position = Vector2( 617.872, 529.215 )
script = ExtResource( 4 )
Rect = Rect2( 0, 0, 80, 80 )
Center = Vector2( 0, 0 )
Clip = false
HAlign = 1

[node name="Circle2DObject" type="Node" parent="Plane2DRenderer/VBoxRenderer2"]
script = ExtResource( 5 )
Position = Vector2( 40, 40 )
Radius = 40.0
LineColor = Color( 1, 1, 1, 1 )
Fill = true
FillColor = Color( 0, 0, 0, 1 )

[node name="Plane2DRenderer" type="Node2D" parent="Plane2DRenderer"]
position = Vector2( 457.872, 449.215 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
Rect = Rect2( 0, 0, 360, 240 )
Center = Vector2( 0, 0 )
Clip = false

[node name="Vector2DObject" type="Node" parent="Plane2DRenderer/Plane2DRenderer"]
script = ExtResource( 6 )
PositionFrom = Vector2( 40, 40 )
PositionTo = Vector2( 200, 120 )
LineWidth = 3.0
LineColor = Color( 0.87451, 0.270588, 0.270588, 1 )
TipWidth = 16.0
HoldBack = Vector2( 41.5, 41.5 )

[node name="Vector2DObject2" type="Node" parent="Plane2DRenderer/Plane2DRenderer"]
script = ExtResource( 6 )
PositionFrom = Vector2( 40, 200 )
PositionTo = Vector2( 200, 120 )
LineWidth = 3.0
LineColor = Color( 0.294118, 0.647059, 0.364706, 1 )
TipWidth = 16.0
HoldBack = Vector2( 41.5, 41.5 )

[node name="Vector2DObject3" type="Node" parent="Plane2DRenderer/Plane2DRenderer"]
script = ExtResource( 6 )
PositionFrom = Vector2( 240, 120 )
PositionTo = Vector2( 400, 120 )
LineWidth = 3.0
LineColor = Color( 1, 1, 1, 1 )
TipWidth = 16.0
HoldBack = Vector2( 0, 41.5 )

[node name="TextObject2" type="Node" parent="Plane2DRenderer/Plane2DRenderer"]
script = ExtResource( 2 )
TextFont = SubResource( 2 )
Text = "0.00"
HAlign = 1
VAlign = 1
Position = Vector2( 40, 40 )

[node name="TextObject3" type="Node" parent="Plane2DRenderer/Plane2DRenderer"]
script = ExtResource( 2 )
TextFont = SubResource( 2 )
Text = "1.00"
HAlign = 1
VAlign = 1
Position = Vector2( 40, 200 )
TextColor = Color( 0, 0, 0, 1 )

[node name="TextObject4" type="Node" parent="Plane2DRenderer/Plane2DRenderer"]
script = ExtResource( 2 )
TextFont = SubResource( 2 )
Text = "1.00"
HAlign = 1
VAlign = 1
Position = Vector2( 200, 120 )

[node name="TextObject7" type="Node" parent="Plane2DRenderer/Plane2DRenderer"]
script = ExtResource( 2 )
TextFont = SubResource( 2 )
Text = "1.00"
HAlign = 1
VAlign = 1
Position = Vector2( 130, 40 )
TextColor = Color( 0.87451, 0.270588, 0.270588, 1 )

[node name="TextObject6" type="Node" parent="Plane2DRenderer/Plane2DRenderer"]
script = ExtResource( 2 )
TextFont = SubResource( 2 )
Text = "1.00"
HAlign = 1
VAlign = 1
Position = Vector2( 130, 200 )
TextColor = Color( 0.294118, 0.647059, 0.364706, 1 )

[node name="TextObject5" type="Node" parent="Plane2DRenderer/Plane2DRenderer"]
script = ExtResource( 2 )
TextFont = SubResource( 2 )
Text = "1.00"
HAlign = 1
VAlign = 1
Position = Vector2( 200, 190 )

[node name="Input1" type="HSlider" parent="."]
margin_left = 147.872
margin_top = 481.215
margin_right = 437.872
margin_bottom = 497.215
max_value = 1.0
allow_greater = true
allow_lesser = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input2" type="HSlider" parent="."]
margin_left = 147.872
margin_top = 641.215
margin_right = 437.872
margin_bottom = 657.215
max_value = 1.0
value = 1.0
allow_greater = true
allow_lesser = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input3" type="HSlider" parent="."]
margin_left = 557.872
margin_top = 439.215
margin_right = 847.872
margin_bottom = 455.215
min_value = -2.0
max_value = 2.0
step = 0.1
value = 1.0
allow_greater = true
allow_lesser = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input4" type="HSlider" parent="."]
margin_left = 557.872
margin_top = 683.215
margin_right = 847.872
margin_bottom = 699.215
min_value = -2.0
max_value = 2.0
step = 0.1
value = 1.0
allow_greater = true
allow_lesser = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input5" type="HSlider" parent="."]
margin_left = 708.872
margin_top = 631.215
margin_right = 998.872
margin_bottom = 647.215
min_value = -2.0
max_value = 2.0
step = 0.1
value = 1.0
allow_greater = true
allow_lesser = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Input1" to="." method="_on_Input1_value_changed"]
[connection signal="value_changed" from="Input2" to="." method="_on_Input2_value_changed"]
[connection signal="value_changed" from="Input3" to="." method="_on_Input3_value_changed"]
[connection signal="value_changed" from="Input4" to="." method="_on_Input4_value_changed"]
[connection signal="value_changed" from="Input5" to="." method="_on_Input5_value_changed"]
